# ankaflow

./: .gitignore  404.html  README.md  changelog.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: publish-docs.yml  python-package.yml  python-publish.yml
README-browser/: index.html
ankaflow/: __init__.py  api.py  cli.py  const.py  errors.py  models.py
ankaflow/common/: filesystem.py  path.py  renderer.py  security.py  types.py  util.py
ankaflow/connections/: __init__.py  bigquery.py  clickhouse.py  connection.py  delta.py  errors.py  file.py
ankaflow/core/: __init__.py  flow.py  policy.py
ankaflow/internal/: __init__.py  browser.py  duckdb.py  errors.py  macros.py  server.py
ankaflow/models/: __init__.py  components.py  configs.py  connections.py  core.py  enums.py  llm.py  rest.py
ankaflow/tests/: itest_integration.py  itest_sqlgen.py  test_bigquery.py  test_clickhouse.py  test_common_util.py  test_connection_locator.py  test_connection_rewriter.py  test_delta.py  test_duckdb_browser.py  test_file_tap.py  test_filesystem.py  test_fn_macros.py  test_fn_register.py  test_llm_backend.py  test_llm_connection.py  test_materializer.py  test_path.py  test_pipeline.py  test_renderer.py  test_rest_browser.py  test_rest_oauth2.py  test_rest_server.py  test_safe_containers.py  test_security.py  (+1 more)
api/: index.html
browser-readme/: index.html
custom-connection/: index.html
demo/: index.html  worker.js
docs/: README-browser.md  README.md  browser-readme.md  custom-connection.md  getting-started.md  index.md  intro.md  llm-readme.md  motherduck.md  overview.md
getting-started/: index.html
intro/: index.html
llm-readme/: index.html
motherduck/: index.html
overview/: index.html
pyodide/: example.yaml  package.json
search/: search_index.json
(+19 files in other folders)
